--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,11 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@100&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans&family=Ubuntu:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=PT+Serif&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap");
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
