--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 .App {
   text-align: center;
 }
-
+body > #root {
+  height: 100vh;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -17,6 +19,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans&family=Ubuntu:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=PT+Serif&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Shippori+Mincho&display=swap");
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
