--- a/src/Pages/Portfolio/Portfolio.module.css
+++ b/src/Pages/Portfolio/Portfolio.module.css
@@ -1,67 +1,50 @@
 @import url("https://rsms.me/inter/inter.css");
 
-.trailsMain {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.trailsText {
-  position: relative;
-  width: 100%;
-  /* line-height: 110px; */
-  color: black;
-  font-size: 6em;
-  letter-spacing: -9px;
-  will-change: transform, opacity;
-  overflow: hidden;
-}
-
-.trailsText > div {
-  overflow: hidden;
-}
-
-/* .path {
-  stroke-dasharray: 1000;
-  stroke-dashoffset: 1000;
-  animation: dash 5s linear forwards;
-}
-
-@keyframes dash {
-  to {
-    stroke-dashoffset: 0;
-  }
-} */
-
 body {
-  background-color: black;
+  /* background-color: black; */
+  /* background-color: #f5f5f5; */
+
+  height: 100vh;
 }
 
+.mainContainer {
+  height: 100vh;
+  background-color: black;
+  position: relative;
+}
 .strokes text {
   stroke-dasharray: 500;
   stroke-dashoffset: 500;
 }
 
+.strokes g g .symbol {
+  stroke-dasharray: 800;
+  stroke-dashoffset: 800;
+}
+
+.strokes g g .hexaline {
+  stroke-dasharray: 500;
+  stroke-dashoffset: 500;
+}
+
 .textLine1 text {
-  animation: dash 3s linear forwards, filling 1s ease-in forwards;
+  animation: dash 2s linear forwards, filling 1s ease-in forwards;
 }
-/* .textLine2 text {
-  animation: dash 5s linear forwards, filling 1s ease-in forwards;
+
+.textLine1 g g .symbol {
+  animation: dash 1.3s linear forwards, filling 1.5s ease-in forwards;
 }
-.textLine3 text {
-  animation: dash 5s linear forwards, filling 1s ease-in forwards;
+
+.textLine1 g g .hexaline {
+  animation: dash 1.3s linear forwards;
 }
-.textLine4 text {
-  animation: dash 5s linear forwards, filling 1s ease-in forwards;
+
+.hexaline {
+  /* height: 100;
+  width: 100; */
+  stroke: white;
+  stroke-width: 1;
 }
-.textLine5 text {
-  animation: dash 5s linear forwards, filling 1s ease-in forwards;
-} */
 
 .font {
   font-family: "Ubuntu", Serif, georgia, times, serif;
@@ -93,43 +76,21 @@ body {
 }
 
 .font:nth-child(1) {
-  animation-delay: 0.5s;
+  animation-delay: 0.1s;
 }
 
 .font:nth-child(2) {
-  animation-delay: 0.8s;
+  animation-delay: 0.3s;
 }
 
 .font:nth-child(3) {
-  animation-delay: 1.1s;
+  animation-delay: 0.5s;
 }
 
 .font:nth-child(4) {
-  animation-delay: 1.4s;
+  animation-delay: 0.7s;
 }
 
 .font:nth-child(5) {
-  animation-delay: 1.7s;
-}
-
-.simpleTransMain > div {
-  cursor: pointer;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  font-weight: 800;
-  font-size: 25em;
-  will-change: transform, opacity;
-  text-shadow: 0px 2px 40px #00000020, 0px 2px 5px #00000030;
-}
-#root {
-  overflow: hidden;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
+  animation-delay: 0.9s;
 }
