completed first iteration

--- a/src/Components/ProjectDetails/ProjectDetails.module.css
+++ b/src/Components/ProjectDetails/ProjectDetails.module.css
@@ -4,3 +4,16 @@
     right: 0.5em;
     cursor: pointer;
 }
+
+.fullDescription {
+    line-height: 2em;
+    font-size: 1vw;
+    font-family: "Shippori Mincho", serif;
+
+}
+
+.title >h2 {
+    font-weight: 500;
+    font-family: "Shippori Mincho", serif;
+    font-size: 1.5vw;
+}
