--- a/src/Components/ProjectDisplay/ProjectDisplay.module.css
+++ b/src/Components/ProjectDisplay/ProjectDisplay.module.css
@@ -1,22 +1,81 @@
-.container {
-  width: 75vw;
-}
-
 .projectTitle {
-  font-size: 1.5vw;
   font-weight: 550;
 }
 
 .subTitle {
-  font-size: 1vw;
   font-weight: 400;
   padding-left: 0.5em;
 }
 
 .techListTitle {
-  font-size: 0.9vw;
   font-weight: 300;
   padding-left: 0.5em;
+}
+
+/* Large desktop */
+@media (min-width: 1200px) {
+  .projectTitle {
+    font-size: 2vw;
+  }
+
+  .subTitle {
+    font-size: 1.2vw;
+  }
+
+  .techListTitle {
+    font-size: 1vw;
+  }
+}
+
+/* Portrait tablet to landscape and desktop */
+@media (min-width: 768px) and (max-width: 979px) {
+  .projectTitle {
+    font-size: 2vw;
+  }
+
+  .subTitle {
+    font-size: 1.2vw;
+  }
+
+  .techListTitle {
+    font-size: 1vw;
+  }
+}
+
+/* Landscape phone to portrait tablet */
+@media (max-width: 767px) {
+  .projectTitle {
+    font-size: 25px;
+  }
+
+  .subTitle {
+    font-size: 18px;
+  }
+
+  .techListTitle {
+    font-size: 18px;
+  }
+  .active {
+    padding-bottom: 30px;
+  }
+}
+
+/* Landscape phones and down */
+@media (max-width: 480px) {
+  .projectTitle {
+    font-size: 25px;
+  }
+
+  .subTitle {
+    font-size: 18px;
+  }
+
+  .techListTitle {
+    font-size: 18px;
+  }
+  .active {
+    padding-bottom: 30px;
+  }
 }
 
 .fontBackwards {
@@ -92,12 +151,10 @@
   }
 }
 
-
 .detailsButton {
   font-family: "Shippori Mincho", serif;
   text-transform: none;
-  font-size: 0.7vw;
-
+  font-size: 1em;
 }
 /* .gif {
   opacity: 0.2;
